Fix a memory leak

We create dirtyOnScreenWidgets even if QT_NO_OPENGL is defined,
but dtor deletes this object  only if no QT_NO_OPENGL is defined.
Also, copy ctor/assignment operator must be disabled for such a class.

Task-number: QTBUG-47499
Change-Id: I9f8b5721ff6324fa7b28b715af68d0a5496c5eb5
Reviewed-by: Laszlo Agocs <laszlo.agocs@theqtcompany.com>

cregit: 462e537e0334838a9bf90735f9fd14e1b91fc987 https://github.com/qt/qtbase/commit/462e537e0334838a9bf90735f9fd14e1b91fc987